staging/blue/41-payment-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-api-blue
  namespace: astrolumina-staging
  labels:
    app.kubernetes.io/name: payment-api
    app.kubernetes.io/part-of: astrolumina
    app.kubernetes.io/component: payment-api
    environment: staging
    variant: blue
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3032
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: payment-api
    app.kubernetes.io/component: payment-api
    variant: blue
